# financial-sentiment-llm

./: .gitignore  Dockerfile  EXPERIMENTS.md  PROJECT.md  README.md  app.py  pyproject.toml
models/: info.md
scripts/: analyze_errors.py  apply_relabels.py  clean_data.py
src/financial_sentiment_llm/: config.py  data.py  evaluate.py  main.py  model.py  preprocessing.py  train.py
src/finsentiment/: __main__.py  config.py  dataset.py  evaluate.py  main.py
src/finsentiment/cli/: analyze.py  evaluate.py  parser.py  train.py
src/finsentiment/datasets/: __init__.py  clean_data.py  dataset_multi.py  dataset_single.py  load.py  preprocessing.py  registry.py  sentiment.py
src/finsentiment/evaluation/: evaluator.py  metrics.py
src/finsentiment/modeling/: __init__.py  bert.py  lora.py  multi_task.py  single_task.py
src/finsentiment/training/: __init__.py  trainer.py  trainer_multi.py  trainer_single.py
