[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-sentiment-llm"
version = "0.1.0"
description = "Fine-tuned LLM for financial sentiment analysis"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "datasets>=2.15.0",
    "trl>=0.7.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
