[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsentiment"
version = "0.2.0"
description = "Fine-tuned LLM for financial sentiment analysis"
authors = [{name = "Pablo Matorras-Cuevas", email = "pablo.matorras@github.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Note: torch, torchvision, torchaudio must be installed separately
    # See README for GPU vs CPU installation instructions
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "datasets>=2.15.0",
    "trl>=0.7.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "black",
    "ruff",
]
demo = [
    "gradio>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
